--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: <p align="center"> Giorgio Carbone </p>
+title: <p align="center"> Amr Alfayoumy </p>
 
 logo: "/images/picture.png?raw=true"
 
