--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ logo: "/images/picture.png?raw=true"
 
 description:
   <p align="center">
-  Milan, Italy
+  Cairo, Egypt
   <br> (+39) 3406959794
   <br> carbone.giorgio4@gmail.com
   <br> <a href="pdf/Carbone_Giorgio_CV_eng.pdf">Resume</a> |
