--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,13 @@ description:
   <a href="https://github.com/alfayoumy">GitHub</a>
   
   <p align="justify">
-  I am a <b>data scientist</b> who enjoys connecting the dots by the use of technology. 
+  I am a <b>data scientist</b> who enjoys drawing knowledge and insights from data and thinks data always has a better idea. 
   <br>
-  I have graduated with a <b>Master's Degree in Data Science at University of Milano-Bicocca</b>, where I received solid training in all the major fields of Data Science.
+  I have graduated summa cum laude with a <b>Bachelor's Degree in Computer Engineering (CGPA of 3.92) from Nile University</b>, where I received solid training in all the major fields of computer engineering.
   <br>
-  I have a hard science education, having achieved a <b>Bachelor's Degree in Chemical Sciences and Technologies</b>.
+  During the course of my career, I managed to accrue over 3 years of work experience and developed an interest in Data Science and AI. To develop my interest even further, I have acquired multiple certificates for various data science and AI courses via Coursera, Udacity, and others (listed below in the Certificates section).
   <br>
-  I consider myself a kind, empathetic, creative and determined person. I am pragmatic and organized, yet flexible.
+  I consider myself a passionate, hard-working, empathetic, and determined person. I am also a fast-learner with a creative attitude to problem-solving. To put it simply, I am pragmatic and organized, yet flexible.
   <br><br>
   </p>
   
