--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,9 @@ description:
   During the course of my career, I managed to accrue over 3 years of work experience and developed an interest in Data Science and AI. To develop my interest even further, I have acquired multiple certificates for various data science and AI courses via Coursera, Udacity, and others (listed below in the Certificates section).
   <br>
   I consider myself a passionate, hard-working, empathetic, and determined person. I am also a fast-learner with a creative attitude to problem-solving. To put it simply, I am pragmatic and organized, yet flexible.
-  <br><br>
+  <br>
+  My ultimate goal in life is to use AI to make the world a better place for all humanity.
+  <br>
   </p>
   
 theme: jekyll-theme-minimal
