--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ description:
   <br>
   I have graduated summa cum laude with a <b>Bachelor's Degree in Computer Engineering (CGPA of 3.92) from Nile University</b>, where I received solid training in all the major fields of computer engineering.
   <br>
-  During the course of my career, I managed to accrue over 3 years of work experience and developed an interest in Data Science and AI. To develop my interest even further, I have acquired multiple certificates for various data science and AI courses via Coursera, Udacity, and others (listed below in the Certificates section).
+  I have acquired multiple certificates for various data science and AI courses via <b>Coursera</b>, <b>Udacity</b>, and others (listed below in the Certificates section).
   <br>
   I consider myself a passionate, hard-working, empathetic, and determined person. I am also a fast-learner with a creative attitude to problem-solving. To put it simply, I am pragmatic and organized, yet flexible.
   <br>
-  My ultimate goal in life is to use AI to make the world a better place for all humanity.
+  My ultimate goal in life is to <b>use AI to make the world a better place for all humanity</b>.
   <br>
   </p>
   
