--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ description:
   <p align="justify">
   I am a <b>data scientist</b> who enjoys drawing insights from data and thinks data always has a better idea. 
   <br>
-  I have graduated summa cum laude with a <b>Bachelor's Degree in Computer Engineering (CGPA of 3.92) from Nile University</b>, where I received solid training in all the major fields of computer engineering.
+  I have graduated summa cum laude with a <b>Bachelor's Degree in Computer Engineering (CGPA of 3.92) from Nile University</b>
   <br>
-  I have acquired multiple certificates for various data science and AI courses via <b>Coursera</b>, <b>Udacity</b>, and others (listed below in the Certificates section).
+  I have also completed various data science and AI courses via <b>Coursera</b>, <b>Udacity</b>, and others (listed in the Certificates section).
   <br>
   I consider myself a passionate, hard-working, and determined person. I am also a fast-learner with a creative attitude to problem-solving.
   <br>
