--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description:
   <a href="https://github.com/alfayoumy">GitHub</a>
   
   <p align="justify">
-  I am a <b>data scientist</b> who enjoys drawing insights from data and thinks data always has a better idea. 
+  I am a <b>data scientist</b> who enjoys drawing insights from data. 
   <br>
   I have graduated summa cum laude with a <b>Bachelor's Degree in Computer Engineering (CGPA of 3.92) from Nile University</b>
   <br>
