--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description:
   <p align="center">
   Cairo, Egypt
   <br> +201026286004
-  <br> amr.alfayoumy@outlook.com
+  <br> <a href="mailto:amr.alfayoumy@outlook.com">amr.alfayoumy@outlook.com</a>
   <br> <a href="pdf/Amr_Alfayoumy.pdf">Resume</a> |
   <a href="https://www.linkedin.com/in/alfayoumy/">LinkedIn</a> |
   <a href="https://github.com/alfayoumy">GitHub</a>
